syntax = "proto3";

package pi2schema;

option java_outer_classname = "EncryptedPersonalDataV1";

message EncryptedPersonalData {
  string subject_id = 1;
  string kms_id = 2;
  bytes data = 3;
  bytes encrypted_data_key = 4;

  //(protobuf) metadata
  int32 personal_data_field_number = 10;


}